Added vetID to addVisitToOwner
Needs reflection in frontend to function correctly
